--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -10,7 +10,7 @@
 [core]
 	editor = nano
 [credential]
-	helper = cache --timeout 7200
+	helper = cache --timeout=14400
 [alias]
 	last = log -1 HEAD
 	mylog = log --oneline --graph
