--- a/config/vscodium/settings.json
+++ b/config/vscodium/settings.json
@@ -13,6 +13,7 @@
     "editor.fontLigatures": true,
     "editor.cursorBlinking": "solid",
     "editor.rulers": [ 80 ],
-    "window.zoomLevel": 2,
-    "editor.wordWrap": "bounded"
+    "window.zoomLevel": 1,
+    "editor.wordWrap": "bounded",
+    "cSpell.language": ",fr"
 }
